(include_subdirs unqualified)

(library
 (name shared_native)
 (libraries
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.js
  server-reason-react.belt)
 (modules :standard \ server)
 (preprocess
  (pps melange.ppx browser_ppx server-reason-react.ppx)))

(copy_files# "../*.re")

(executable 
  (name server)
  (modules server)
  (libraries shared_native))
